[story-866080327] Fix incorrect shuffle read because of data lost (merge request !109)